[package]
name = "example-rest-grpc-multiplex"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.3"
futures = "0.3.25"
hyper = { version = "0.14.23", features = ["full"] }
prost = "0.11.6"
tokio = { version = "1.24.2", features = ["full"] }
tonic = { version = "0.8.3" }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.8.4", features = ["prost"] }
